--- a/app/app.css
+++ b/app/app.css
@@ -1,15 +1,24 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --color-primary: #F5F5F4;
+  --color-secondary: #1E2229;
 }
 
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
+@layer base {
+  html,
+  body {
+    @apply bg-primary text-secondary dark:bg-secondary dark:text-primary;
+  }
+  
+  .toggleMode,
+  a {
+    @apply active:translate-y-1 transition-all;
+  }
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+  .customHeaderButton{
+    @apply border-2 
   }
 }
