--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
@@ -5,20 +6,26 @@
 @theme {
   --color-primary: #F5F5F4;
   --color-secondary: #1E2229;
+  --font-fira: "Fira Mono", serif;
 }
 
 @layer base {
   html,
   body {
-    @apply bg-primary text-secondary dark:bg-secondary dark:text-primary;
+    @apply bg-primary text-secondary dark:bg-secondary dark:text-primary font-fira;
   }
   
   .toggleMode,
-  a {
-    @apply active:translate-y-1 transition-all;
+  a,
+  li {
+    @apply active:translate-y-1 transition-all cursor-pointer;
   }
 
   .customHeaderButton{
-    @apply border-2 
+    @apply border-2
+  }
+
+  .navLinks{
+    @apply border-2 p-2 shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] ;
   }
 }
