--- a/app/app.css
+++ b/app/app.css
@@ -33,16 +33,28 @@
   }
 
 .folder-bg {
-    @apply bg-primary dark:bg-secondary border-2 border-secondary dark:border-primary p-4 rounded-b-lg;
+    @apply bg-primary dark:bg-secondary border-2 border-secondary dark:border-primary p-4 rounded-br-lg rounded-bl-lg rounded-tl-lg shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)];
     min-height: 600px;
 }
 
 .tab {
-    @apply bg-primary dark:bg-secondary border-x-2 border-t-2 border-secondary dark:border-primary px-4 py-2 rounded-t-lg w-14;
-    position: relative;
+    @apply bg-primary dark:bg-secondary border-x-2 border-t-2 border-secondary dark:border-primary py-2 rounded-t-lg w-14;
 }  .tab.active {
-    @apply bg-primary dark:bg-secondary text-secondary dark:text-primary;
-    z-index: 10;
+    @apply bg-primary dark:bg-secondary text-secondary dark:text-primary pt-3;
     margin-bottom: -2px;
+}
+
+.tab:nth-child(3) {
+  @apply shadow-[3px_0px_0px_0px_rgba(30,34,41,0.30)]
+         dark:shadow-[3px_0px_0px_0px_rgba(245,245,244,0.3)];
+}
+
+.loading {
+    opacity: 0;
+}
+
+.loaded {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
 }
 }
