--- a/app/app.css
+++ b/app/app.css
@@ -4,17 +4,17 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-    --color-primary: #f2f2f2;
-    --color-secondary: #1e2229;
-    --color-folder-primary: #F7F7F7;
-    --color-folder-secondary: #2D313B;
+    --color-primary: #c5c5c5;
+    --color-secondary: #1d2619;
+    --color-folder-primary: #d9d9d9;
+    --color-folder-secondary: #232e1e;
     --font-fira: "Fira Mono", serif;
 }
 
 @layer base {
     html,
     body {
-        @apply bg-primary text-secondary dark:bg-secondary dark:text-primary font-fira text-sm;
+        @apply bg-primary text-secondary dark:bg-secondary dark:text-primary font-fira text-sm bg-[url(./assets/noise.png)];
     }
 
     button,
@@ -23,11 +23,15 @@
     }
 
     .navLinks {
-        @apply border-2 w-[35px] h-[35px] flex justify-center items-center shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)];
+        @apply bg-primary dark:bg-secondary border-2 w-[35px] h-[35px] flex justify-center items-center shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)];
     }
 
     .navLinksInternal {
-        @apply border-2 px-4 h-[35px] flex justify-center items-center shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)];
+        @apply bg-primary dark:bg-secondary border-2 px-4 h-[35px] flex justify-center items-center shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)];
+    }
+
+    .navLinksHome {
+        @apply bg-primary dark:bg-secondary border-2 p-3 flex justify-center items-center shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)];
     }
 
     .footerHover {
@@ -36,22 +40,20 @@
 
     .folder-bg {
         @apply bg-folder-primary dark:bg-folder-secondary border-2 border-secondary dark:border-primary shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)];
-        min-height: 600px;
-        max-height: 600px;
+        height: 600px;
     }
 
-    .project-card{
-      @apply border-2 border-secondary dark:border-primary bg-primary dark:bg-secondary p-6 shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)] h-64 flex flex-col justify-between overflow-hidden;
+    .project-card {
+        @apply border-2 border-secondary dark:border-primary bg-[#f2f2f2] dark:bg-[#2f3e28] p-6 shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)] h-64 flex flex-col justify-between overflow-hidden;
     }
 
     .tab {
-        @apply bg-primary dark:bg-secondary border-x-2 border-t-2 border-secondary dark:border-primary p-2 rounded-t-lg w-14;
+        @apply bg-folder-primary dark:bg-folder-secondary border-x-2 border-t-2 border-secondary dark:border-primary p-2 rounded-t-lg w-14;
     }
     .tab.active {
         .tab-fill {
             @apply bg-secondary dark:bg-primary w-full h-1 rounded-t;
         }
-        @apply bg-primary dark:bg-secondary text-secondary dark:text-primary;
         margin-bottom: -2px;
     }
 
@@ -67,5 +69,34 @@
     .loaded {
         opacity: 1;
         transition: opacity 0.5s ease-in-out;
+    }
+
+    .hover-effect-bg {
+        @apply relative overflow-hidden;
+    }
+
+    .hover-effect-bg::after {
+        content: "";
+        @apply absolute left-0 top-0 h-full w-full origin-left bg-gray-100 transition-transform duration-100 ease-in-out;
+        transform: scaleX(0);
+    }
+
+    .group:hover .hover-effect-bg::after {
+        transform: scaleX(1);
+    }
+
+    @keyframes blink {
+        50% {
+            opacity: 0;
+        }
+    }
+
+    .active-cursor::after {
+        content: "█"; /* The cursor character */
+        display: inline-block;
+        vertical-align: top;
+        margin-left: 2px;
+        opacity: 1;
+        animation: blink 1s step-end infinite;
     }
 }
