--- a/app/app.css
+++ b/app/app.css
@@ -49,12 +49,14 @@
 
     .tab {
         @apply bg-folder-primary dark:bg-folder-secondary border-x-2 border-t-2 border-secondary dark:border-primary p-2 rounded-t-lg w-14;
+        @apply transition-transform duration-100 ease-out;
     }
+    
     .tab.active {
+        @apply scale-y-120;
         .tab-fill {
             @apply bg-secondary dark:bg-primary w-full h-1 rounded-t;
         }
-        margin-bottom: -2px;
     }
 
     .tab:nth-child(3) {
