--- a/app/app.css
+++ b/app/app.css
@@ -9,13 +9,35 @@
     --color-folder-primary: #d9d9d9;
     --color-folder-secondary: #232e1e;
     --font-fira: "Fira Mono", serif;
+    --font-jetbrainsmono: "JetBrainsMono", monospace;
 }
 
+
+
 @layer base {
+
+    @font-face {
+  font-family: JetBrainsMono;
+  font-weight: 700;
+  font-style: normal;
+  src: url("./assets/fonts/JetBrainsMono-Bold.ttf");
+}
+
+    @font-face {
+  font-family: JetBrainsMono;
+  font-weight: 400;
+  font-style: normal;
+  src: url("./assets/fonts/JetBrainsMono-Medium.ttf");
+}
+
     html,
     body {
-        @apply bg-primary text-secondary dark:bg-secondary dark:text-primary font-fira text-sm bg-[url(./assets/noise.png)];
+        @apply bg-primary text-secondary dark:bg-secondary dark:text-primary font-jetbrainsmono text-sm bg-[url(./assets/noise.png)];
     }
+
+      h1, h2, h3, h4, h5, h6 {
+    @apply font-jetbrainsmono font-bold;
+  }
 
     button,
     a {
@@ -47,7 +69,7 @@
     }
 
     .project-card {
-        @apply border-2 border-secondary dark:border-primary bg-[#f2f2f2] dark:bg-[#2f3e28] shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)] h-full flex flex-col justify-between overflow-hidden p-6 hover:scale-102 transition-transform duration-100 ease-in-out;
+        @apply border-2 border-secondary dark:border-primary bg-[#f2f2f2] dark:bg-[#2f3e28] shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)] h-full flex flex-col justify-between overflow-hidden p-6 hover:translate-x-0.5 hover:translate-y-0.5 hover:shadow-none ease-in-out active:scale-99;
     }
 
     .tab {
@@ -103,6 +125,37 @@
         margin-left: 2px;
         opacity: 1;
         animation: blink 1s step-end infinite;
+    }
+
+    /* Profile card and overlay */
+    .profile-card {
+        @apply relative bg-cover bg-center overflow-hidden border-2 border-secondary dark:border-primary bg-[#f2f2f2] dark:bg-[#2f3e28] shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)] h-full;
+    }
+
+    .profile-overlay {
+        @apply absolute inset-0 border-2 border-secondary dark:border-primary bg-[#f2f2f2] dark:bg-[#2f3e28] shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)] flex flex-col items-center justify-center opacity-0 transition-opacity duration-300;
+    }
+
+    .profile-bg{
+        @apply bg-[#f2f2f2] dark:bg-[#2f3e28] shadow-[3px_3px_0px_0px_rgba(30,_34,_41,_0.30)] dark:shadow-[3px_3px_0px_0px_rgba(245,245,244,0.3)]
+    }
+
+    .profile-card:hover .profile-overlay {
+        @apply opacity-100;
+    }
+
+    .bg-badgeBg{
+        @apply bg-primary dark:bg-secondary;
+    }
+    
+    .hide-scrollbar {
+        scrollbar-width: thin;
+        -ms-overflow-style: none;
+    }
+
+    .hide-scrollbar::-webkit-scrollbar {
+        width: 0px;
+        height: 0px;
     }
 }
 
