--- a/app/app.css
+++ b/app/app.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap");
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
@@ -12,7 +11,6 @@
     --color-folder-secondary: #3e3e3e;
     --color-card-secondary: #515151;
 
-    --font-fira: "Fira Mono", serif;
     --font-jetbrainsmono: "JetBrainsMono", monospace;
 }
 
@@ -22,6 +20,7 @@
         font-weight: 700;
         font-style: normal;
         src: url("./assets/fonts/JetBrainsMono-Bold.ttf");
+        font-display: swap;
     }
 
     @font-face {
@@ -29,11 +28,12 @@
         font-weight: 400;
         font-style: normal;
         src: url("./assets/fonts/JetBrainsMono-Medium.ttf");
+        font-display: swap;
     }
 
     html,
     body {
-        @apply bg-primary text-secondary dark:bg-secondary dark:text-primary font-jetbrainsmono text-sm bg-[url(./assets/noise.png)];
+        @apply bg-primary text-secondary dark:bg-secondary dark:text-primary font-jetbrainsmono text-sm bg-[url(./assets/noise.avif)];
     }
 
     h1,
